2013-07-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Fixed the access to the
	module graph from events view on metaconsole for bug
	#2344

2013-07-17  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	  godmode/snmpconsole/snmp_alert.php,
	  pandoradb.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql: Added support for SNMP alert ordering.

2013-07-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions_users.php
	include/functions_groups.php
	operation/events/events_list.php: Fixed the visibility
	of the users in the events view filter. Now the user 
	can only filter by the users of the groups where the
	user belongs

2013-07-17  Sergio Martin <sergio.martin@artica.es>

	* operation/menu.php
	operation/events/events_rss.php
	operation/events/export_csv.php
	operation/events/events_list.php
	operation/events/events.php
	operation/events/events.build_query.php
	general/shortcut_bar.php: Fixed group filter
	for bug #2346 and clean a lot of events code

2013-07-17  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php: Delete unnecessary ACL 
	check

	* images/up.png: Add missed image to new styles

2013-07-17 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/configurar_agente.php: fixed the default value for
	"prediction_module" in tagente_module.
	
	* include/graphs/functions_flot.php,
	include/graphs/functions_pchart.php,
	include/graphs/functions_gd.php, include/graphs/functions_utils.php,
	include/javascript/pandora_alerts.js,
	include/javascript/pandora_modules.js,
	include/javascript/pandora_events.js,
	include/functions_network_components.php: cleaned source code style.

2013-07-17  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/status_monitor.php
	operation/agentes/alerts_status.php